Removed the Circular dependencies in GiRaFFEFood.

--- a/Tutorial-GiRaFFEFood_HO.ipynb
+++ b/Tutorial-GiRaFFEFood_HO.ipynb
@@ -16,7 +16,7 @@
     "(the unspecified components are set to 0). Here, $C_0$ is a constant set to $1$ in our simulations. Now, to use this initial data scheme, we need to transform it into the quantities actually tracked by $\\giraffe$ and HydroBase: $A_i$, $B^i$, $S_i$, $v^i$, and $\\Phi$. This can be done with eqs. 14, 16, and 18, here given in that same order:\n",
     "\\begin{align}\n",
     "S_\\mu &= -n_\\nu T^\\nu_{{\\rm EM} \\mu} \\\\\n",
-    "v^i &= 4 \\pi \\alpha \\frac{\\gamma^{ij} \\tilde{S}_j}{\\sqrt{\\gamma} B^2} - \\beta^i \\\\\n",
+    "v^i &= \\alpha \\frac{\\epsilon^{ijk} E_j B_k}{B^2} -\\beta^i \\\\\n",
     "B^i &= \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k \\\\\n",
     "\\end{align}\n",
     "-Is this a circular dependency? $\\tilde{S}_\\mu$ depends on $T^\\nu_{{\\rm EM} \\mu}$ which depends on the velocity, but the velocity depends on $\\tilde{S}_\\mu$.\n",
@@ -66,7 +66,8 @@
     "\\begin{align}\n",
     "A_{\\phi} &= \\frac{C_0}{2} r^2 \\sin^2 \\theta \\\\\n",
     "E_{\\phi} &= 2 M C_0 \\left( 1+ \\frac {2M}{r} \\right)^{-1/2} \\sin^2 \\theta \\\\\n",
-    "\\end{align}\n"
+    "\\end{align}\n",
+    "While we have $E_i$ set as a variable in NRPy+, note that the final C code won't store these values."
    ]
   },
   {
@@ -125,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have the vector potential and electric fields that we need, we will turn our attention to what other quantities we might need for eqs. 14, 16, and 18 from the [$\\giraffe$ paper](https://arxiv.org/pdf/1704.00599.pdf). We will need the metric quantites: the lapse $\\alpha$, the shift $\\beta^i$, and the three-metric $\\gamma_{ij}$. We will also need the stress energy tensor $$T^{\\mu \\nu}_{\\rm EM} = b^2 u^{\\mu} u^{\\nu} + \\frac{b^2}{2} g^{\\mu \\nu} - b^{\\mu} b^{\\nu}.$$ Note that $T^{\\mu \\nu}_{\\rm EM}$ is in terms of $b^\\mu$ and $u^\\mu$, provided by $\\text{u0_smallb_Poynting__Cartesian}$. We will also need the Levi-Civita symbol, provided by $\\text{WeylScal4NRPy}$. "
+    "We will now find the magnetic field $$B^i = \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k. $$ We will need the metric quantites: the lapse $\\alpha$, the shift $\\beta^i$, and the three-metric $\\gamma_{ij}$. We will also need the Levi-Civita symbol, provided by $\\text{WeylScal4NRPy}$. "
    ]
   },
   {
@@ -150,6 +151,31 @@
     "            LeviCivitaDDD[i][j][k] = LCijk * sp.sqrt(gammadet)\n",
     "            LeviCivitaUUU[i][j][k] = LCijk / sp.sqrt(gammadet)\n",
     "\n",
+    "AD_dD = ixp.zerorank2()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        AD_dD[i][j] = sp.simplify(sp.diff(AD[i],rfm.xxCart[j]))\n",
+    "                                  \n",
+    "BU = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have the vector potential and electric fields that we need, we will turn our attention to what other quantities we might need for eqs. 14, 16, and 18 from the [$\\giraffe$ paper](https://arxiv.org/pdf/1704.00599.pdf).  We will also need the stress energy tensor $$T^{\\mu \\nu}_{\\rm EM} = b^2 u^{\\mu} u^{\\nu} + \\frac{b^2}{2} g^{\\mu \\nu} - b^{\\mu} b^{\\nu}.$$ Note that $T^{\\mu \\nu}_{\\rm EM}$ is in terms of $b^\\mu$ and $u^\\mu$, provided by $\\text{u0_smallb_Poynting__Cartesian}$. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 5: Construct the Stress-Energy tensor\n",
     "# For TEMUU, we can reuse our code from GiRaFFE_HO.\n",
     "import u0_smallb_Poynting__Cartesian.u0_smallb_Poynting__Cartesian as u0b\n",
@@ -198,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,36 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now build the drift velocity $$v^i = 4 \\pi \\alpha \\frac{\\gamma^{ij} \\tilde{S}_j}{\\sqrt{\\gamma} B^2} - \\beta^i$$. Then, we will need to transform it to the Valencia 3-velocity using the rule $\\bar{v}^i = \\frac{1}{\\alpha} \\left(v^i +\\beta^i \\right)$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# B^2 is an inner product defined in the usual way:\n",
-    "B2 = sp.sympify(0)\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        B2 += gammaDD[i][j] * BU[i] * BU[j]\n",
-    "\n",
-    "driftvU = ixp.zerorank1()\n",
-    "for i in range(DIM):\n",
-    "    driftvU[i] = -betaU[i]\n",
-    "    for j in range(DIM):\n",
-    "        driftvU[i] += 4*M_PI*alpha*gammaUU[i][j]*StildeD[j]/gammadet/B2\n",
-    "\n",
-    "for i in range(DIM):\n",
-    "    ValenciavU[i] = (driftvU[i] + betaU[i])/alpha\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will now find the magnetic field $$B^i = \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k$$"
+    "We will now build the drift velocity $$ v^i = \\alpha \\frac{\\epsilon^{ijk} E_j B_k}{B^2} -\\beta^i. $$ Then, we will need to transform it to the Valencia 3-velocity using the rule $\\bar{v}^i = \\frac{1}{\\alpha} \\left(v^i +\\beta^i \\right)$.\n"
    ]
   },
   {
@@ -263,12 +260,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AD_dD = ixp.declarerank2(\"AD_dD\",\"nosym\")\n",
-    "BU = ixp.zerorank1()\n",
+    "# B^2 is an inner product defined in the usual way:\n",
+    "B2 = sp.sympify(0)\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
-    "            BU[i] += LeviCivitaUUU[i][j][k] * AD_dD[k][j]\n"
+    "        B2 += gammaDD[i][j] * BU[i] * BU[j]\n",
+    "        \n",
+    "BD = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        BD[i] = gammaDD[i][j] * BU[j]\n",
+    "\n",
+    "driftvU = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    driftvU[i] = -betaU[i]\n",
+    "    for j in range(DIM):\n",
+    "        driftvU[i] += alpha*LeviCivitaUUU[i][j][k]*ED[j]*BD[k]/B2\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    ValenciavU[i] = (driftvU[i] + betaU[i])/alpha\n"
    ]
   },
   {
@@ -281,21 +291,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
