--- a/Tutorial-ETK_thorn-GiRaFFEFood_HO.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFEFood_HO.ipynb
@@ -50,6 +50,16 @@
     "par.set_parval_from_str(\"grid::DIM\", 3)\n",
     "DIM = par.parval_from_str(\"grid::DIM\")\n",
     "\n",
+    "# Step 1c: Within the ETK, the 3D gridfunctions x, y, and z store the\n",
+    "#          Cartesian grid coordinates. Setting the gri.xx[] arrays\n",
+    "#          to point to these gridfunctions forces NRPy+ to treat\n",
+    "#          the Cartesian coordinate gridfunctions properly --\n",
+    "#          reading them from memory as needed.\n",
+    "x,y,z = gri.register_gridfunctions(\"AUX\",[\"x\",\"y\",\"z\"])\n",
+    "gri.xx[0] = x\n",
+    "gri.xx[1] = y\n",
+    "gri.xx[2] = z\n",
+    "\n",
     "import GiRaFFEFood_HO as gfho\n",
     "gfho.GiRaFFEFood_HO()\n",
     "\n",
@@ -73,7 +83,6 @@
     "                            ]\n",
     "\n",
     "GiRaFFEFood_A_v_CKernel = fin.FD_outputC(\"returnstring\",GiRaFFEFood_A_v_to_print)\n",
-    "GiRaFFEFood_A_v_CKernel = \"const double u0 = u0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\n\" + GiRaFFEFood_A_v_CKernel\n",
     "GiRaFFEFood_S_B_CKernel = fin.FD_outputC(\"returnstring\",GiRaFFEFood_S_B_to_print)\n",
     "GiRaFFEFood_S_B_CKernel = \"const double u0 = u0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\n\" + GiRaFFEFood_S_B_CKernel\n",
     "\n",
@@ -93,7 +102,14 @@
     "    file.write(str(GiRaFFEFood_A_v_looped))\n",
     "\n",
     "with open(\"GiRaFFEFood/src/GiRaFFEFood_S_B_ExactWald.h\", \"w\") as file:\n",
-    "    file.write(str(GiRaFFEFood_S_B_looped))\n"
+    "    file.write(str(GiRaFFEFood_S_B_looped))\n",
+    "\n",
+    "# Step 5: Import the function to calculate u0 and write it to a file.\n",
+    "import u0_smallb_Poynting__Cartesian.u0_smallb_Poynting__Cartesian as u0etc\n",
+    "#u0etc.compute_u0_smallb_Poynting__Cartesian(gammaDD,betaU,alpha,ValenciavU,BU)\n",
+    "\n",
+    "with open(\"GiRaFFEFood/src/computeu0_Cfunction.h\", \"w\") as file:\n",
+    "    file.write(u0etc.computeu0_Cfunction)\n"
    ]
   },
   {
@@ -128,41 +144,118 @@
     "#include \"cctk.h\"\n",
     "#include \"cctk_Parameters.h\"\n",
     "#include \"cctk_Arguments.h\"\n",
+    "void GiRaFFE_set_A_v(const cGH* restrict const cctkGH,const int *cctk_lsh,const int *cctk_nghostzones,\n",
+    "                     const CCTK_REAL *xGF,const CCTK_REAL *yGF,const CCTK_REAL *zGF,const CCTK_REAL *u0GF,\n",
+    "                     CCTK_REAL *AD0GF,CCTK_REAL *AD1GF,CCTK_REAL *AD2GF,\n",
+    "                     CCTK_REAL *ValenciavU0GF,CCTK_REAL *ValenciavU1GF,CCTK_REAL *ValenciavU2GF) {\n",
+    "\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "\n",
+    "#include \"GiRaFFEFood_A_v_ExactWald.h\"\n",
+    "\n",
+    "}\n",
+    "\n",
+    "void GiRaFFE_set_S_B(const cGH* restrict const cctkGH,const int *cctk_lsh,const int *cctk_nghostzones,\n",
+    "                     const CCTK_REAL *ValenciavU0GF,const CCTK_REAL *ValenciavU1GF,const CCTK_REAL *ValenciavU2GF,const CCTK_REAL *u0GF,\n",
+    "                     const CCTK_REAL *alphaGF,const CCTK_REAL *betaU0GF,const CCTK_REAL *betaU1GF,const CCTK_REAL *betaU2GF,\n",
+    "                     const CCTK_REAL *gammaDD00GF,const CCTK_REAL *gammaDD01GF,const CCTK_REAL *gammaDD02GF,const CCTK_REAL *gammaDD11GF,const CCTK_REAL *gammaDD12GF,const CCTK_REAL *gammaDD22GF,\n",
+    "                     CCTK_REAL *BU0GF,CCTK_REAL *BU1GF,CCTK_REAL *BU2GF,\n",
+    "                     CCTK_REAL *StildeD0GF,CCTK_REAL *StildeD1GF,CCTK_REAL *StildeD2GF) {\n",
+    "\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "\n",
+    "#include \"GiRaFFEFood_S_B_ExactWald.h\"\n",
+    "\n",
+    "}\n",
+    "\n",
+    "void Write_to_HydroBase(const cGH* restrict const cctkGH,const int *cctk_lsh,const int *cctk_nghostzones,\n",
+    "                        const CCTK_REAL *ValenciavU0,const CCTK_REAL *ValenciavU1,const CCTK_REAL *ValenciavU2,\n",
+    "                        const CCTK_REAL *AD0,const CCTK_REAL *AD1,const CCTK_REAL *AD2,\n",
+    "                        const CCTK_REAL *BU0,const CCTK_REAL *BU1,const CCTK_REAL *BU2,\n",
+    "                        CCTK_REAL *vel, CCTK_REAL *Avec,CCTK_REAL *Bvec) {\n",
+    "  /* Bvec[i] <- BUi\n",
+    "   * Avec[i] <- ADi\n",
+    "   * vel[i]  <- ValenciavUi\n",
+    "   */\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "  \n",
+    "  CCTK_INT idx3;\n",
+    "  CCTK_INT idx4[3];\n",
+    "#pragma omp parallel for\n",
+    "  for(int i2=0; i2<cctk_lsh[2]; i2++) {\n",
+    "      for(int i1=0; i1<cctk_lsh[1]; i1++) {\n",
+    "          for(int i0=0; i0<cctk_lsh[0]; i0++) {\n",
+    "              idx3 = CCTK_GFINDEX3D(cctkGH, i0,i1,i2);\n",
+    "              idx4[0] = CCTK_GFINDEX4D(cctkGH, i0,i1,i2,0);\n",
+    "              idx4[1] = CCTK_GFINDEX4D(cctkGH, i0,i1,i2,1);\n",
+    "              idx4[2] = CCTK_GFINDEX4D(cctkGH, i0,i1,i2,2);\n",
+    "              Bvec[idx4[0]] = BU0[idx3];\n",
+    "              Bvec[idx4[1]] = BU1[idx3];\n",
+    "              Bvec[idx4[2]] = BU2[idx3];\n",
+    "              Avec[idx4[0]] = AD0[idx3];\n",
+    "              Avec[idx4[1]] = AD1[idx3];\n",
+    "              Avec[idx4[2]] = AD2[idx3];\n",
+    "              vel[idx4[0]] = ValenciavU0[idx3];\n",
+    "              vel[idx4[1]] = ValenciavU1[idx3];\n",
+    "              vel[idx4[2]] = ValenciavU2[idx3];\n",
+    "              // We don't set Phi, because it is always set to zero in GiRaFFE ID thorns.\n",
+    "          }\n",
+    "      }\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "void find_u0(CCTK_REAL *ValenciavU0GF,CCTK_REAL *ValenciavU1GF,CCTK_REAL *ValenciavU2GF,CCTK_REAL alpha,\n",
+    "             const CCTK_REAL gammaDD00,const CCTK_REAL gammaDD01,const CCTK_REAL gammaDD02,const CCTK_REAL gammaDD11,const CCTK_REAL gammaDD12,const CCTK_REAL gammaDD22,\n",
+    "             CCTK_REAL *u0GF,const CCTK_INT idx)\n",
+    "{\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "  CCTK_REAL u0;\n",
+    "  CCTK_REAL ValenciavU0 = ValenciavU0GF[idx];\n",
+    "  CCTK_REAL ValenciavU1 = ValenciavU1GF[idx];\n",
+    "  CCTK_REAL ValenciavU2 = ValenciavU2GF[idx];\n",
+    "\n",
+    "#include \"computeu0_Cfunction.h\"\n",
+    "\n",
+    "  u0GF[idx] = u0;\n",
+    "  ValenciavU0GF[idx] = ValenciavU0;\n",
+    "  ValenciavU1GF[idx] = ValenciavU1;\n",
+    "  ValenciavU2GF[idx] = ValenciavU2;\n",
+    "}\n",
     "\n",
     "void GiRaFFE_ExactWaldID(CCTK_ARGUMENTS)\n",
     "{\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
     "  \n",
-    "  const CCTK_REAL *xGF = x;\n",
-    "  const CCTK_REAL *yGF = y;\n",
-    "  const CCTK_REAL *zGF = z;\n",
-    "  const CCTK_REAL *gammaDD00GF = gxx;\n",
-    "  const CCTK_REAL *gammaDD01GF = gxy;\n",
-    "  const CCTK_REAL *gammaDD02GF = gxz;\n",
-    "  const CCTK_REAL *gammaDD11GF = gyy;\n",
-    "  const CCTK_REAL *gammaDD12GF = gyz;\n",
-    "  const CCTK_REAL *gammaDD22GF = gzz;\n",
-    "  const CCTK_REAL *alphaGF = alp;\n",
-    "  const CCTK_REAL *betaU0GF = betax;\n",
-    "  const CCTK_REAL *betaU1GF = betay;\n",
-    "  const CCTK_REAL *betaU2GF = betaz;\n",
-    "    \n",
-    "  CCTK_REAL *ValenciavU0GF = ValenciavU0;\n",
-    "  CCTK_REAL *ValenciavU1GF = ValenciavU1;\n",
-    "  CCTK_REAL *ValenciavU2GF = ValenciavU2;\n",
-    "  CCTK_REAL *StildeD0GF = StildeD0;\n",
-    "  CCTK_REAL *StildeD1GF = StildeD1;\n",
-    "  CCTK_REAL *StildeD2GF = StildeD2;\n",
-    "  CCTK_REAL *BU0GF = BU0;\n",
-    "  CCTK_REAL *BU1GF = BU1;\n",
-    "  CCTK_REAL *BU2GF = BU2;\n",
-    "  CCTK_REAL *AD0GF = AD0;\n",
-    "  CCTK_REAL *AD1GF = AD1;\n",
-    "  CCTK_REAL *AD2GF = AD2;\n",
-    "  {\n",
-    "#include \"GiRaFFEFood_ExactWald.h\"\n",
+    "  GiRaFFE_set_A_v(cctkGH,cctk_lsh,cctk_nghostzones,\n",
+    "                  x,y,z,u0,\n",
+    "                  AD0,AD1,AD2,\n",
+    "                  ValenciavU0,ValenciavU1,ValenciavU2);\n",
+    "\n",
+    "  #pragma omp parallel for\n",
+    "  for(int i2=0; i2<cctk_lsh[2]; i2++) {\n",
+    "      for(int i1=0; i1<cctk_lsh[1]; i1++) {\n",
+    "          for(int i0=0; i0<cctk_lsh[0]; i0++) {\n",
+    "              const CCTK_INT idx = CCTK_GFINDEX3D(cctkGH, i0,i1,i2);\n",
+    "              find_u0(ValenciavU0,ValenciavU1,ValenciavU2,alp[idx],\n",
+    "                      gxx[idx],gxy[idx],gxz[idx],gyy[idx],gyz[idx],gzz[idx],\n",
+    "                      u0,idx);\n",
+    "          }\n",
+    "      }\n",
     "  }\n",
+    "  \n",
+    "  GiRaFFE_set_S_B(cctkGH,cctk_lsh,cctk_nghostzones,\n",
+    "                  ValenciavU0,ValenciavU1,ValenciavU2,u0,\n",
+    "                  alp,betax,betay,betaz,\n",
+    "                  gxx,gxy,gxz,gyy,gyz,gzz,\n",
+    "                  BU0,BU1,BU2,\n",
+    "                  StildeD0,StildeD1,StildeD2);\n",
+    "  \n",
+    "  Write_to_HydroBase(cctkGH,cctk_lsh,cctk_nghostzones,\n",
+    "                     ValenciavU0,ValenciavU1,ValenciavU2,\n",
+    "                     AD0,AD1,AD2,\n",
+    "                     BU0,BU1,BU2,\n",
+    "                     vel,Avec,Bvec);\n",
     "}"
    ]
   },
@@ -194,10 +287,7 @@
    "source": [
     "%%writefile GiRaFFEFood/interface.ccl\n",
     "implements: GiRaFFEFood_HO\n",
-    "inherits: admbase GiRaFFE_HO grid HydroBase\n",
-    "\n",
-    "void FUNCTION GiRaFFE_to_HydroBase()\n",
-    "USES FUNCTION GiRaFFE_to_HydroBase\n"
+    "inherits: admbase GiRaFFE_HO grid HydroBase\n"
    ]
   },
   {
@@ -225,6 +315,9 @@
     "shares: grid\n",
     "\n",
     "USES KEYWORD type\n",
+    "\n",
+    "shares: GiRaFFE_HO\n",
+    "USES CCTK_REAL GAMMA_SPEED_LIMIT\n",
     "\n",
     "restricted:\n",
     "CCTK_KEYWORD initial_data \"Type of initial data\"\n",
@@ -270,6 +363,10 @@
     "  STORAGE: GiRaFFE_HO::GiRaFFE_Bs[1]\n",
     "  STORAGE: GiRaFFE_HO::GiRaFFE_u0[1]\n",
     "  LANG: C\n",
+    "  READS: admbase::alp(Everywhere)\n",
+    "  READS: admbase::betax(Everywhere)\n",
+    "  READS: admbase::betay(Everywhere)\n",
+    "  READS: admbase::betaz(Everywhere)\n",
     "  READS: admbase::gxx(Everywhere)\n",
     "  READS: admbase::gxy(Everywhere)\n",
     "  READS: admbase::gxz(Everywhere)\n",
@@ -291,24 +388,7 @@
     "  WRITES: GiRaFFE_HO::StildeD0(Everywhere)\n",
     "  WRITES: GiRaFFE_HO::StildeD1(Everywhere)\n",
     "  WRITES: GiRaFFE_HO::StildeD2(Everywhere)\n",
-    "} \"Initial data for GiRaFFE\"\n",
-    "\n",
-    "schedule GiRaFFE_to_HydroBase at CCTK_INITIAL AFTER GiRaFFEFood\n",
-    "{\n",
-    "  LANG:C\n",
-    "  READS: GiRaFFE_HO::BU0(Everywhere)\n",
-    "  READS: GiRaFFE_HO::BU1(Everywhere)\n",
-    "  READS: GiRaFFE_HO::BU2(Everywhere)\n",
-    "  READS: GiRaFFE_HO::AD0(Everywhere)\n",
-    "  READS: GiRaFFE_HO::AD1(Everywhere)\n",
-    "  READS: GiRaFFE_HO::AD2(Everywhere)\n",
-    "  READS: GiRaFFE_HO::ValenciavU0(Everywhere)\n",
-    "  READS: GiRaFFE_HO::ValenciavU1(Everywhere)\n",
-    "  READS: GiRaFFE_HO::ValenciavU2(Everywhere)\n",
-    "  WRITES: HydroBase::Avec(Everywhere)\n",
-    "  WRITES: HydroBase::Bvec(Everywhere)\n",
-    "  WRITES: HydroBase::vel(Everywhere)\n",
-    "} \"Converts the GiRaFFE variables to HydroBase variables\"\n"
+    "} \"Initial data for GiRaFFE\"\n"
    ]
   },
   {
