Cleaned up and expanded the documentation for GiRaFFE and GiRaFFEFood.

--- a/Tutorial-ETK_thorn-GiRaFFEFood_HO.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFEFood_HO.ipynb
@@ -86,6 +86,7 @@
     "GiRaFFEFood_S_B_CKernel = fin.FD_outputC(\"returnstring\",GiRaFFEFood_S_B_to_print)\n",
     "GiRaFFEFood_S_B_CKernel = \"const double u0 = u0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\n\" + GiRaFFEFood_S_B_CKernel\n",
     "\n",
+    "# Format the code within a C loop over cctkGH\n",
     "GiRaFFEFood_A_v_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],[\"cctk_lsh[2]\",\"cctk_lsh[1]\",\"cctk_lsh[0]\"],\\\n",
     "                                   [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
     "                                   GiRaFFEFood_A_v_CKernel.replace(\"time\",\"cctk_time\"))\n",
