--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -304,11 +304,11 @@
     "\n",
     "Now that we have generated the C code kernel *GiRaFFE_RHSs.h* and the parameters file *NRPy_params.h*, we will need to write C code to make use of these files. To do this, we can simply follow the example within the [IDScalarWaveNRPy tutorial module](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb). Functions defined by these files will be called by the Einstein Toolkit scheduler (specified in schedule.ccl below).\n",
     "\n",
-    "Also, here we will write the logic that determines which files are called where in order to calculate $B^i$. \n",
+    "Also, we will write the logic that determines which files are called where in order to calculate $B^i$ here. \n",
     "1. Take the primary finite differencing order $N$ from the param.ccl file. Fill in the interior points with the corresponding FD order. \n",
-    "1. Then, at each face, at $0+\\text{cctk_nghostzones[face]}-1$ and $\\text{cctk_lsh[face]}-\\text{cctk_nghostzones[face]}+1$, calculate B at order $N-2$\n",
+    "1. Then, at each face, at $0+\\text{cctk_nghostzones[face]}-1$ and $\\text{cctk_lsh[face]}-\\text{cctk_nghostzones[face]}+1$, calculate $B^i$ at order $N-2$\n",
     "1. Continue moving outwards: at the points $0+\\text{cctk_nghostzones[face]}-p$ and $\\text{cctk_lsh[face]}-\\text{cctk_nghostzones[face]}+p$, calculate B at order $N-2p$.\n",
-    "1. When $\\text{cctk_nghostzones[face]}-p = 0$, use the upwinding derivatives "
+    "1. When $\\text{cctk_nghostzones[face]}-p = 0$, use the upwinding and downwinding derivatives for the appropriate face."
    ]
   },
   {
@@ -1206,7 +1206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The conservative-to-primitive solver also depends on inlined_functions.C"
+    "The conservative-to-primitive solver also depends on inlined_functions.C from the old version of $\\giraffe$."
    ]
   },
   {
@@ -2006,21 +2006,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
