Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide: Improve notation in documentation

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -114,7 +114,7 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
-      "Finished in 0.00297808647156 seconds.\n"
+      "Finished in 0.00273585319519 seconds.\n"
      ]
     }
    ],
@@ -195,9 +195,9 @@
     "$$\n",
     "1. S_1 will take the value of $\\pm 1$, depending on the unit-vector direction and the points $(x_0,x_1,x_2)_{\\rm in}$ and $(x_0,x_1,x_2)_{\\rm IB}$\n",
     "1. Repeat the above for the remaining components of the rank-$N$ tensor $j\\in \\{2,3,...,N\\}$, storing each $S_j$.\n",
-    "1. The tensor mapping from $(x_0,x_1,x_2)_{\\rm IB}$ to $(x_0,x_1,x_2)_{\\rm in}$ for this tensor $T^{ijk...}_{lmn...}$ will be given by\n",
+    "1. The tensor mapping from $(x_0,x_1,x_2)_{\\rm IB}$ to $(x_0,x_1,x_2)_{\\rm in}$ for this tensor $T^{ijk...}_{mnp...}$ will be given by\n",
     "$$\n",
-    "T^{ijk...}_{lmn...}(x_0,x_1,x_2)_{\\rm IB} = \\prod_{j=1}^N S_j T^{ijk...}_{lmn...}(x_0,x_1,x_2)_{\\rm in}.\n",
+    "T^{ijk...}_{lmn...}(x_0,x_1,x_2)_{\\rm IB} = \\prod_{\\ell=1}^N S_\\ell T^{ijk...}_{mnp...}(x_0,x_1,x_2)_{\\rm in}.\n",
     "$$\n",
     "\n",
     "In this formulation of BSSN, we only need to deal with rank-0, rank-1, and *symmetric* rank-2 tensors. Further, our basis consists of 3 directions, so there are a total of \n",
@@ -346,7 +346,7 @@
      "output_type": "stream",
      "text": [
       "Generating C code for Hamiltonian constraint\n",
-      "Finished in 14.9890890121 seconds.\n"
+      "Finished in 19.0668182373 seconds.\n"
      ]
     }
    ],
