Code cleanup and bug fixes to avoid seg faults. Working to eliminate the dependence on ADM-to-BSSN function in GIRaFFE.

--- a/Tutorial-ETK_thorn-GiRaFFEFood_HO.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFEFood_HO.ipynb
@@ -82,8 +82,8 @@
     "                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"StildeD2\"),rhs=gfho.StildeD[2]),\\\n",
     "                            ]\n",
     "\n",
-    "GiRaFFEFood_A_v_CKernel = fin.FD_outputC(\"returnstring\",GiRaFFEFood_A_v_to_print)\n",
-    "GiRaFFEFood_S_B_CKernel = fin.FD_outputC(\"returnstring\",GiRaFFEFood_S_B_to_print)\n",
+    "GiRaFFEFood_A_v_CKernel = fin.FD_outputC(\"returnstring\",GiRaFFEFood_A_v_to_print,params=\"outCverbose=False\")\n",
+    "GiRaFFEFood_S_B_CKernel = fin.FD_outputC(\"returnstring\",GiRaFFEFood_S_B_to_print,params=\"outCverbose=False\")\n",
     "GiRaFFEFood_S_B_CKernel = \"const double u0 = u0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\n\" + GiRaFFEFood_S_B_CKernel\n",
     "\n",
     "# Format the code within a C loop over cctkGH\n",
@@ -180,12 +180,12 @@
     "   */\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
     "  \n",
-    "  CCTK_INT idx3;\n",
-    "  CCTK_INT idx4[3];\n",
     "#pragma omp parallel for\n",
     "  for(int i2=0; i2<cctk_lsh[2]; i2++) {\n",
     "      for(int i1=0; i1<cctk_lsh[1]; i1++) {\n",
     "          for(int i0=0; i0<cctk_lsh[0]; i0++) {\n",
+    "              CCTK_INT idx3;\n",
+    "              CCTK_INT idx4[3];\n",
     "              idx3 = CCTK_GFINDEX3D(cctkGH, i0,i1,i2);\n",
     "              idx4[0] = CCTK_GFINDEX4D(cctkGH, i0,i1,i2,0);\n",
     "              idx4[1] = CCTK_GFINDEX4D(cctkGH, i0,i1,i2,1);\n",
@@ -205,9 +205,9 @@
     "  }\n",
     "}\n",
     "\n",
-    "void find_u0(CCTK_REAL *ValenciavU0GF,CCTK_REAL *ValenciavU1GF,CCTK_REAL *ValenciavU2GF,CCTK_REAL alpha,\n",
+    "void find_u0(CCTK_REAL alpha,const CCTK_INT idx,\n",
     "             const CCTK_REAL gammaDD00,const CCTK_REAL gammaDD01,const CCTK_REAL gammaDD02,const CCTK_REAL gammaDD11,const CCTK_REAL gammaDD12,const CCTK_REAL gammaDD22,\n",
-    "             CCTK_REAL *u0GF,const CCTK_INT idx)\n",
+    "             CCTK_REAL *ValenciavU0GF,CCTK_REAL *ValenciavU1GF,CCTK_REAL *ValenciavU2GF,CCTK_REAL *u0GF)\n",
     "{\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
     "  CCTK_REAL u0;\n",
@@ -238,9 +238,9 @@
     "      for(int i1=0; i1<cctk_lsh[1]; i1++) {\n",
     "          for(int i0=0; i0<cctk_lsh[0]; i0++) {\n",
     "              const CCTK_INT idx = CCTK_GFINDEX3D(cctkGH, i0,i1,i2);\n",
-    "              find_u0(ValenciavU0,ValenciavU1,ValenciavU2,alp[idx],\n",
+    "              find_u0(alp[idx],idx,\n",
     "                      gxx[idx],gxy[idx],gxz[idx],gyy[idx],gyz[idx],gzz[idx],\n",
-    "                      u0,idx);\n",
+    "                      ValenciavU0,ValenciavU1,ValenciavU2,u0);\n",
     "          }\n",
     "      }\n",
     "  }\n",
