--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,27 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrote to file \"GiRaFFE_HO/src/B_from_A_10.h\"\n",
-      "Wrote to file \"GiRaFFE_HO/src/B_from_A_8.h\"\n",
-      "Wrote to file \"GiRaFFE_HO/src/B_from_A_6.h\"\n",
-      "Wrote to file \"GiRaFFE_HO/src/B_from_A_4.h\"\n",
-      "Wrote to file \"GiRaFFE_HO/src/B_from_A_2.h\"\n",
-      "Wrote to file \"GiRaFFE_HO/src/B_from_A_2x0D.h\"\n",
-      "Wrote to file \"GiRaFFE_HO/src/B_from_A_2x0U.h\"\n",
-      "Wrote to file \"GiRaFFE_HO/src/B_from_A_2x1D.h\"\n",
-      "Wrote to file \"GiRaFFE_HO/src/B_from_A_2x1U.h\"\n",
-      "Wrote to file \"GiRaFFE_HO/src/B_from_A_2x2D.h\"\n",
-      "Wrote to file \"GiRaFFE_HO/src/B_from_A_2x2U.h\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#AD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"AD\",DIM=3)\n",
     "# Step 2: Import the four metric\n",
@@ -313,17 +295,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting GiRaFFE_HO/src/GiRaFFE.c\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile GiRaFFE_HO/src/GiRaFFE.c\n",
     "#include <math.h>\n",
@@ -487,9 +461,9 @@
     "\n",
     "}\n",
     "\n",
-    "void calc_u0(CCTK_REAL *ValenciavU0GF,CCTK_REAL *ValenciavU1GF,CCTK_REAL *ValenciavU2GF,CCTK_REAL alpha,\n",
+    "void calc_u0(CCTK_REAL alpha,const CCTK_INT idx,\n",
     "             const CCTK_REAL gammaDD00,const CCTK_REAL gammaDD01,const CCTK_REAL gammaDD02,const CCTK_REAL gammaDD11,const CCTK_REAL gammaDD12,const CCTK_REAL gammaDD22,\n",
-    "             CCTK_REAL *u0GF,const CCTK_INT idx)\n",
+    "             CCTK_REAL *ValenciavU0GF,CCTK_REAL *ValenciavU1GF,CCTK_REAL *ValenciavU2GF,CCTK_REAL *u0GF)\n",
     "{\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
     "  CCTK_REAL u0;\n",
@@ -518,9 +492,9 @@
     "      for(int i1=0; i1<cctk_lsh[1]; i1++) {\n",
     "          for(int i0=0; i0<cctk_lsh[0]; i0++) {\n",
     "              const CCTK_INT idx = CCTK_GFINDEX3D(cctkGH, i0,i1,i2);\n",
-    "              calc_u0(ValenciavU0,ValenciavU1,ValenciavU2,alp[idx],\n",
+    "              calc_u0(alp[idx],idx,\n",
     "                      gxx[idx],gxy[idx],gxz[idx],gyy[idx],gyz[idx],gzz[idx],\n",
-    "                      u0,idx);\n",
+    "                      ValenciavU0,ValenciavU1,ValenciavU2,u0);\n",
     "          }\n",
     "      }\n",
     "  }\n",
@@ -678,17 +652,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting GiRaFFE_HO/src/driver_conserv_to_prims_FFE.C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile GiRaFFE_HO/src/driver_conserv_to_prims_FFE.C\n",
     "/* We evolve forward in time a set of functions called the \n",
@@ -761,27 +727,23 @@
     "        const CCTK_REAL rL = r[index];\n",
     "        if(rL>min_radius_inside_of_which_conserv_to_prims_FFE_and_FFE_evolution_is_DISABLED) {\n",
     "\n",
-    "          const CCTK_REAL psi_bssnL = psi_bssn[index];\n",
-    "          const CCTK_REAL psi2 = psi_bssnL*psi_bssnL;\n",
-    "          const CCTK_REAL psi4 = psi2*psi2;\n",
-    "          const CCTK_REAL psim4 = 1.0/psi4;\n",
-    "          const CCTK_REAL sqrtg = psi4*psi2; // Determinant of 3-metric\n",
+    "          const CCTK_REAL sqrtg = sqrt(gammadet); // Determinant of 3-metric\n",
     "\n",
     "          // \\gamma_{ij}, computed from \\tilde{\\gamma}_{ij}\n",
-    "          const CCTK_REAL gxxL = psi4*gtxx[index];\n",
-    "          const CCTK_REAL gxyL = psi4*gtxy[index];\n",
-    "          const CCTK_REAL gxzL = psi4*gtxz[index];\n",
-    "          const CCTK_REAL gyyL = psi4*gtyy[index];\n",
-    "          const CCTK_REAL gyzL = psi4*gtyz[index];\n",
-    "          const CCTK_REAL gzzL = psi4*gtzz[index];\n",
+    "          const CCTK_REAL gxxL = gxx[index];\n",
+    "          const CCTK_REAL gxyL = gxy[index];\n",
+    "          const CCTK_REAL gxzL = gxz[index];\n",
+    "          const CCTK_REAL gyyL = gyy[index];\n",
+    "          const CCTK_REAL gyzL = gyz[index];\n",
+    "          const CCTK_REAL gzzL = gzz[index];\n",
     "\n",
     "          // \\gamma^{ij} = psim4 * \\tilde{\\gamma}^{ij}\n",
-    "          const CCTK_REAL gupxxL = psim4*gtupxx[index];\n",
-    "          const CCTK_REAL gupxyL = psim4*gtupxy[index];\n",
-    "          const CCTK_REAL gupxzL = psim4*gtupxz[index];\n",
-    "          const CCTK_REAL gupyyL = psim4*gtupyy[index];\n",
-    "          const CCTK_REAL gupyzL = psim4*gtupyz[index];\n",
-    "          const CCTK_REAL gupzzL = psim4*gtupzz[index];\n",
+    "          const CCTK_REAL gupxxL = gammaUU00[index];\n",
+    "          const CCTK_REAL gupxyL = gammaUU01[index];\n",
+    "          const CCTK_REAL gupxzL = gammaUU02[index];\n",
+    "          const CCTK_REAL gupyyL = gammaUU11[index];\n",
+    "          const CCTK_REAL gupyzL = gammaUU12[index];\n",
+    "          const CCTK_REAL gupzzL = gammaUU22[index];\n",
     "\n",
     "          // Read in magnetic field and momentum variables once from memory, since memory access is expensive:\n",
     "          const CCTK_REAL BU0L = BU0[index];\n",
@@ -989,17 +951,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting GiRaFFE_HO/src/convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile GiRaFFE_HO/src/convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C\n",
     "#include \"cctk.h\"\n",
@@ -1103,17 +1057,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting GiRaFFE_HO/src/GiRaFFE_headers.h\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile GiRaFFE_HO/src/GiRaFFE_headers.h\n",
     "// To safeguard against double-including this header file:\n",
@@ -1211,17 +1157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting GiRaFFE_HO/src/inlined_functions.C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile GiRaFFE_HO/src/inlined_functions.C\n",
     "static inline CCTK_REAL fasterpow_ppm_reconstruct(const CCTK_REAL inputvar,const CCTK_REAL inputpow) {\n",
@@ -1405,17 +1343,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting GiRaFFE_HO/src/compute_conservatives_FFE.C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile GiRaFFE_HO/src/compute_conservatives_FFE.C\n",
     "void GiRaFFE_compute_conservatives(const CCTK_REAL *PRIMS,  const CCTK_REAL *METRIC, CCTK_REAL *CONSERVS) {\n",
@@ -1490,17 +1420,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting GiRaFFE_HO/src/GiRaFFE_HydroBase_conversion.c\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile GiRaFFE_HO/src/GiRaFFE_HydroBase_conversion.c\n",
     "#include <math.h>\n",
@@ -1593,17 +1515,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting GiRaFFE_HO/interface.ccl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile GiRaFFE_HO/interface.ccl\n",
     "implements: GiRaFFE_HO\n",
@@ -1649,7 +1563,7 @@
     "} \"The Valencia 3-velocity\"\n",
     "\n",
     "public:\n",
-    "cctk_real GiRaFFE_rhs type = GF Timelevels=3 tags='tensortypealias=\"Scalar\"'\n",
+    "cctk_real GiRaFFE_rhs type = GF Timelevels=1 tags='tensortypealias=\"Scalar\"'\n",
     "{\n",
     "  Stilde_rhsD0,Stilde_rhsD1,Stilde_rhsD2,A_rhsD0,A_rhsD1,A_rhsD2,psi6Phi_rhs\n",
     "} \"The evolved scalar fields\"\n",
@@ -1692,17 +1606,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting GiRaFFE_HO/param.ccl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile GiRaFFE_HO/param.ccl\n",
     "shares: MethodOfLines\n",
@@ -1775,23 +1681,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting GiRaFFE_HO/schedule.ccl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile GiRaFFE_HO/schedule.ccl\n",
-    "STORAGE: GiRaFFE_rhs[timelevels]\n",
-    "STORAGE: GiRaFFE_vars[timelevels]\n",
-    "STORAGE: GiRaFFE_aux[timelevels]\n",
-    "STORAGE: GiRaFFE_Bs[timelevels]\n",
+    "STORAGE: GiRaFFE_rhs[1]\n",
+    "STORAGE: GiRaFFE_vars[3]\n",
+    "STORAGE: GiRaFFE_aux[3]\n",
+    "STORAGE: GiRaFFE_Bs[3]\n",
+    "STORAGE: GiRaFFE_Vs[3]\n",
+    "STORAGE: GiRaFFE_u0[3]\n",
+    "STORAGE: BSSN_quantities[1]\n",
     "\n",
     "# POSTPOSTINITIAL\n",
     "schedule GROUP GiRaFFE_PostPostInitial at CCTK_POSTPOSTINITIAL before MoL_PostStep after HydroBase_Con2Prim\n",
@@ -1979,17 +1880,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting GiRaFFE_HO/src/make.code.defn\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile GiRaFFE_HO/src/make.code.defn\n",
     "SRCS = GiRaFFE.c driver_conserv_to_prims_FFE.C convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C \\\n",
